--- a/src/styles/global/_start.scss
+++ b/src/styles/global/_start.scss
@@ -15,10 +15,11 @@
     color: white;
     top: 0;
     right: 0;
-    margin: 460px 330px 0 0;
+    margin: 460px 320px 0 0;
 
   }
   &-gameTitle{
+    font-weight: bold;
     position: absolute;
     z-index: 2;
     font-size: 67px;
